networkpolicy-deny-other-namespaces.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-other-namespaces
  namespace: demo
spec:
  podSelector: null
  ingress:
    - from:
        - podSelector: {}
