networkpolicy-web-db-allow-all-ns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-db-allow-all-ns
  namespace: demo
spec:
  podSelector:
    matchLabels:
      role: web-db
  ingress:
    - from:
        - namespaceSelector: {}
